# minima-hs

./: minima.cabal
app/: Main.hs
src/: Dice.hs  Minima.hs  MinimaAST.hs  MinimaParser.hs  MinimaTerpreter.hs  NanoParse.hs  SubMinimaAST.hs  SubMinimaPrettyPrinter.hs
