name:                minima
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/writeoncereadmany/minima-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Tom Johnson
maintainer:          tarjohnson1979@gmail.com
copyright:           2017 Tom Johnson
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Minima
                     , MinimaAST
                     , MinimaParser
                     , MinimaTerpreter
                     , NanoParse
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , random
  default-language:    Haskell2010

executable minima-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , minima
                     , containers
  default-language:    Haskell2010

test-suite minima-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , minima
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/minima
